--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "antd": "^2.8.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   }
