--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redshift-data",
+  "name": "redshift-datepicker",
   "version": "1.0.0",
   "description": "Interview",
   "main": "index.js",
